# renshi

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: Untitled 2.fs  Untitled 3.vs  Untitled.sbproj  diffuse.frag  diffuse.vert
source/: Application.cpp  Application.h  GeometryObject.cpp  GeometryObject.h  MenuItem.h  RenshiApp.cpp  RenshiApp.h  Shader.h  main.cpp
src/: main.c
